# CustomFeatures

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/CustomFeatures/: CumulativeMeans.py  __init__.py
src/CustomFeatures.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_CumulativeMeans.py
